--- a/rewards/index.html
+++ b/rewards/index.html
@@ -313,8 +313,8 @@
                 <img src="/assets/logo.png" alt="Site logo" class="logo">
                 <h1 class="title">NUKE</h1>
             </div>
-            <a href="https://rainbet.org/partner/NUKE" target="_blank" class="claim-button" style="margin:0; font-size:0.9rem; padding: 8px 18px;">
-                <i class="fas fa-arrow-right-to-bracket me-2"></i> Join Now
+            <a href="/" target="_blank" class="claim-button" style="margin:0; font-size:0.9rem; padding: 8px 18px;">
+                <i class="fas fa-arrow-right-to-bracket me-2"></i> HOME
             </a>
         </nav>
     </header>
