--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
               <li class="highlight-link" style="list-style: none;">
                 <a href="/leaderboard/shock" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">SHOCK</a>
               </li>
+              <li class="highlight-link" style="list-style: none;">
+                <a href="/rewards" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">REWARDS</a>
+              </li>
             </ul>
         </nav>
     </header>
