--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
         <div class="left-glow"></div>
         <div class="right-glow"></div>
     </div>
-    <object type="image/png" data="" id="leftsvg" height="100%">
+    <object type="image/png" data="/assets/left-rainbet.png" id="leftsvg" height="100%">
     </object>
-    <object type="image/png" data="" id="rightsvg" height="100%">
+    <object type="image/png" data="/assets/right-rainbet.png" id="rightsvg" height="100%">
     </object>
     <header>
         <nav>
@@ -224,10 +224,10 @@
             </div>
             <ul class="nav-links" style="display: flex; flex-direction: row; justify-content: center; gap: 16px; padding: 10px 0; position: relative; z-index: 999;">
               <li class="highlight-link" style="list-style: none;">
-                <a href="/leaderboard/rainbet" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">RAINBET</a>
+                <a href="/leaderboard/rainbet" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">LEADERBOARD</a>
               </li>
               <li class="highlight-link" style="list-style: none;">
-                <a href="/leaderboard/shock" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">SHOCK</a>
+                <a href="/raffle" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">WEEKLY RAFFLE</a>
               </li>
               <li class="highlight-link" style="list-style: none;">
                 <a href="/rewards" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">REWARDS</a>
@@ -250,15 +250,6 @@
                         </div>
                     </div>
                 </div>
-                      <div class="vertical-line"></div>
-      <div class="image-wrapper">
-        <img class="game-image clash-image" id="clashImage2" src="https://gambizard.vercel.app/assets/rainbet.png"
-             style="cursor: pointer;opacity: 1;" onclick="window.location.href='/leaderboard/shock'">
-        <div class="label">
-                        <div class="price-wrapper leaderboard-outline">
-                            $ 250
-          </div>
-        </div>
     </div>
   </div>
 
@@ -315,53 +306,6 @@
     </div>
   </a>
 
-  <!-- ✅ Matching Clash Card -->
-  <a href="https://shock.com/?r=nuke" class="card-link" target="_blank">
-    <div class="MuiBox-root css-1o7r9kk">
-      <div class="MuiBox-root css-1t0wa4v"><img src="https://gambizard.vercel.app/assets/rainbet.png" alt=""></div>
-      <div class="code-container MuiBox-root css-0">
-        <svg class="MuiSvgIcon-root" viewBox="0 0 24 24">
-          <path d="M6.41 6 5 7.41 9.58 12 5 16.59 6.41 18l6-6z"></path>
-          <path d="m13 6-1.41 1.41L16.17 12l-4.58 4.59L13 18l6-6z"></path>
-        </svg>
-        <p class="MuiTypography-root MuiTypography-body1" style="font-size: 24px;">Code</p>
-        <p class="MuiTypography-root MuiTypography-body1 code">NUKE</p>
-        <svg class="MuiSvgIcon-root" viewBox="0 0 24 24">
-          <path d="M17.59 18 19 16.59 14.42 12 19 7.41 17.59 6l-6 6z"></path>
-          <path d="m11 18 1.41-1.41L7.83 12l4.58-4.59L11 6l-6 6z"></path>
-        </svg>
-      </div>
-      <div class="MuiBox-root css-18dqm7l">
-        <div class="description MuiBox-root css-0">
-          <svg class="MuiSvgIcon-root" viewBox="0 0 24 24">
-            <path d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"></path>
-          </svg>
-          <p class="MuiTypography-root MuiTypography-body1">EXCLUSIVE REWARDS</p>
-        </div>
-        <div class="description MuiBox-root css-0">
-          <svg class="MuiSvgIcon-root" viewBox="0 0 24 24">
-            <path d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"></path>
-          </svg>
-          <p class="MuiTypography-root MuiTypography-body1">LEADERBOARD</p>
-        </div>
-        <div style="display: flex; flex-wrap: wrap; gap: 12px; justify-content: center; margin-top: 16px;">
- <a
-    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root signup-button css-sbgg6k-MuiButtonBase-root-MuiButton-root"
-    tabindex="0" href="https://shock.com/?r=nuke" target="_blank">
-    Sign up
-    <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"></span>
-  </a>
-
-  <a
-    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root signup-button css-sbgg6k-MuiButtonBase-root-MuiButton-root"
-    tabindex="0" href="/leaderboard/shock" target="_blank">
-    Leaderboard
-    <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"></span>
-  </a>
-        </div>
-      </div>
-    </div>
-  </a>
 </div>
 
         </div>
@@ -465,9 +409,9 @@
         <img src="/assets/tiktok.png" alt="Tiktok Logo" class="icon" />
         <span>@TH3NUK3</span>
     </a>
-    <a href="https://www.instagram.com/Nuketup" target="_blank" class="card youtube">
+    <a href="https://www.instagram.com/the_dailynuke" target="_blank" class="card youtube">
         <img src="/assets/instagram.png" alt="YouTube Logo" class="icon" />
-        <span>@Nuketup</span>
+        <span>@the_dailynuke</span>
     </a>
     <a href="https://discord.gg/pU5NU7BnhH" target="_blank" class="card discord">
         <img src="/assets/discord.png" alt="Discord Logo" class="icon" />
@@ -545,7 +489,7 @@
             <img src="/assets/tiktok.png" alt="Tiktok Logo" class="social-img">
             <span>Tiktok</span>
         </a>
-        <a href="https://www.instagram.com/Nuketup" target="_blank" class="social">
+        <a href="https://www.instagram.com/the_dailynukee" target="_blank" class="social">
             <img src="/assets/instagram.png" alt="Instagram Logo" class="social-img">
             <span>Instagram</span>
         </a>
@@ -613,5 +557,3 @@
             minimizedIcon.style.display = 'none'; // Hide the minimized icon
         };
     };
-
-</script>
